Otel/manifests/otel_poc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-poc-collector-node
spec:
  ports:
    - appProtocol: grpc
      name: otlp-grpc
      port: 4317
      protocol: TCP
      targetPort: 4317
      nodePort: 32317
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: default.otel-poc
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry
  type: NodePort
