Otel/manifests/jaeger_poc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-poc
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /traces
        pathType: Prefix
        backend:
          service:
            name: jaeger-poc-query
            port:
              number: 16686
