Otel/manifests/prometheus_poc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-poc
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
